tests/http/take_request_then_part.stderr
error[E0277]: the trait bound `fn(uringy::ecosystem::http::Request, Query<()>) {root}: Handler<_>` is not satisfied
 --> tests/http/take_request_then_part.rs:7:34
  |
7 |     Router::new().route("/", get(root));
  |                              --- ^^^^ the trait `Handler<_>` is not implemented for fn item `fn(uringy::ecosystem::http::Request, Query<()>) {root}`
  |                              |
  |                              required by a bound introduced by this call
  |
note: required by a bound in `uringy::ecosystem::http::server::routing::get`
 --> src/ecosystem/http/server/routing.rs
  |
  | pub fn get<ARGS>(handler: impl Handler<ARGS> + 'static) -> MethodRouter {
  |                                ^^^^^^^^^^^^^ required by this bound in `get`
